# RustyRosalind

./: .gitignore  Cargo.toml  README.md
proptest-regressions/fasta/: mod.txt
src/: args.rs  dna.rs  dna_string.rs  fasta.rs  lib.rs  matrix.rs  motif.rs  nucleotides.rs  phenotype.rs  rabbits.rs  strands.rs
src/fasta/: mod.rs
src/nucleotides/: dna.rs  dna_chain.rs  mod.rs  protein.rs  rna.rs  rna_chain.rs
src/strands/: dna_strand.rs  mod.rs  protein_strand.rs  rna_strand.rs
tests/: question_tests.rs  test_dna_question.rs
