[package]
name = "rusty_rosalind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
futures = {version = "0.3.21" }
lazy_static = {version = "1.4.0" }
regex = {version = "1" }
reqwest = {version = "0.11" }
tokio = { version = "1", features = ["full"] }